force-app/main/default/objects/Asset_Detail__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset Details</relationshipLabel>
    <relationshipName>Asset_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>