force-app/main/default/objects/Asset_Detail__c/fields/Bounce__c.field-meta.xml
<CustomField>
    <fullName>Bounce__c</fullName>
    <label>Bounce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>