force-app/main/default/objects/Asset_Detail__c/fields/Fixed_Period__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Period__c</fullName>
    <label>Fixed Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>