force-app/main/default/objects/Asset_Detail__c/fields/Is_NACH__c.field-meta.xml
<CustomField>
    <fullName>Is_NACH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NACH</label>
    <type>Checkbox</type>
</CustomField>