force-app/main/default/objects/Asset_Detail__c/fields/Is_PDD__c.field-meta.xml
<CustomField>
    <fullName>Is_PDD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDD</label>
    <type>Checkbox</type>
</CustomField>