force-app/main/default/objects/Asset_Detail__c/fields/Is_Restructured__c.field-meta.xml
<CustomField>
    <fullName>Is_Restructured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restructured</label>
    <type>Checkbox</type>
</CustomField>