force-app/main/default/objects/Asset_Detail__c/fields/Last_Repricing_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Repricing_Date__c</fullName>
    <label>Last Repricing Date</label>
    <type>Date</type>
</CustomField>