force-app/main/default/objects/Asset_Detail__c/fields/MOB__c.field-meta.xml
<CustomField>
    <fullName>MOB__c</fullName>
    <label>MOB</label>
    <type>Date</type>
</CustomField>